--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "firebase": "^11.8.1",
     "genkit": "^1.8.0",
     "jose": "^5.6.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "konva": "^9.3.20",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
@@ -65,6 +67,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-big-calendar": "^1.8.9",
