--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.19.3",
+    "axios": "^1.7.2",
     "canvas": "^3.0.0-rc3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
