--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-konva": "^19.0.1",
     "react-phone-number-input": "^3.4.3",
     "recharts": "^2.15.1",
+    "sharp": "^0.34.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
